infrastructure/base/mariadb-operator/mariadb-operator.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb-operator-system
  labels:
    networking.tinyrack.net/isolation: enabled
